tests/error/struct_errors/type_missing2.err
Error: Unexpected statement (at $FILE:10:4)
   | 
 8 | @guppy.struct(module)
 9 | class MyStruct:
10 |     x = 42
   |     ^^^^^^ Unexpected statement in struct definition

Guppy compilation failed due to 1 previous error
